--- a/templates/view.html
+++ b/templates/view.html
@@ -227,7 +227,7 @@
         <div class="icon">
             <i class="fas fa-network-wired"></i>
         </div>
-        <h1>Available Devices</h1>
+        <h1>Available Servers Devices    </h1>
     </div>
     
     {% if devices %}
