sniffer for 2 clients

--- a/templates/qostype.html
+++ b/templates/qostype.html
@@ -392,7 +392,7 @@
                         <span class="status-badge status-ready">Ready</span>
                     </div>
                 </div>
-                <p class="test-desc">Verify if DSCP field is correctly marked and recognized at L2/L3 levels.</p>
+                <p class="test-desc">Verify if DSCP field is correctly marked and recognized at L3 level </p>
                 <div class="test-actions">
                     
                     <a href="{{ url_for('auth.view_devices') }}" class="btn btn-custom">Run Test</a>
